TM-13748 Changed from location the progressbar

--- a/web-app/static/pages/UI/general.html
+++ b/web-app/static/pages/UI/general.html
@@ -75,8 +75,8 @@
   <script src="../../../dist/js/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
 
   <script src="../../../js/jquery-1.9.1-ui.js"></script>
-  <!-- ProgressBar.js -->
-  <script src="../../../dist/js/vendors/progressbar.js/dist/progressbar.js"></script>
+  <!-- ProgressBar-->
+  <script src="../../../js/progressbar/progressbar.js"></script>
 
   <!-- TDSTMLayout App -->
   <script src="../../../dist/js/TDSTMLayout.min.js"></script>
