--- a/src/main/webapp/static/documentation/index.html
+++ b/src/main/webapp/static/documentation/index.html
@@ -101,7 +101,7 @@
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
             <i class="fa fa-bars"></i>
           </button>
-          <img id="logo-header" src="../../images/TMHeaderLogo.png" border="0" />
+          <img id="logo-header" src="../../images/TMHeaderLogo_v4.7.png" border="0" />
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
